<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:floatingLabel="highlight"
            app:floatingLabelText="@string/username"
            app:iconLeft="@drawable/ic_account_circle_black_24dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:floatingLabel="highlight"
            app:floatingLabelText="@string/password"
            app:iconLeft="@drawable/ic_keyboard_control_black_24dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/L2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sign_up"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"

            android:textAppearance="@android:style/TextAppearance.Small" />

        <Button
            android:id="@+id/btn_sign_in"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"

            android:text="@string/signin"
            android:textAppearance="@android:style/TextAppearance.Small" />


    </LinearLayout>
</LinearLayout>
