<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <WebView

        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_toobar_shape"
        android:divider="?android:attr/listDivider"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_coeff"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_format_indent_decrease_black_24dp"
            android:text="@string/method_coeff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_harmonic"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_format_indent_increase_black_24dp"
            android:text="@string/mothod_harmonic"
            android:textSize="14sp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"

            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_my"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_account_circle_black_24dp"
            android:text="@string/my"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>